--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       class="container text-center"
       style="background-color: rgba(255, 0, 0, 0.363); border-radius: 1em"
     >
+      <div class="row row-cols-3" id="loading-message">
+        <h3>Carregando...</h3>
+      </div>
+
       <div class="row row-cols-3" id="divRow"></div>
     </div>
     <script src="js/index.js"></script>
